--- a/readme
+++ b/readme
@@ -1,5 +1,12 @@
 Reference List
 
+General Info
+https://github.com/EHB-MCT/web2-backend-JarnoPauwels
+https://www.youtube.com/c/MikeDerycke
+https://www.youtube.com/watch?v=EotWjOiCYoE&list=PLGsnrfn8XzXii2J5-Jpqufypu6upxcSGx&index=9&ab_channel=MikeDerycke
+https://www.youtube.com/watch?v=kUWDPlypeb8&list=PLGsnrfn8XzXii2J5-Jpqufypu6upxcSGx&index=10&t=1446s&ab_channel=MikeDerycke
+https://www.youtube.com/watch?v=k6D5MakBktY&t=347s&ab_channel=MikeDerycke
+
 Login System
 https://www.youtube.com/watch?v=BpzwUTzFGpI&list=PLGsnrfn8XzXii2J5-Jpqufypu6upxcSGx&index=29&ab_channel=MikeDerycke
 https://www.youtube.com/watch?v=QvSQt_rMZlA&list=PLGsnrfn8XzXii2J5-Jpqufypu6upxcSGx&index=31&ab_channel=MikeDerycke
